[package]
name = "quicr-core"
version = "0.4.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Ralith/quicr"
description = "Moved to quinn-proto (was: State machine for the QUIC transport protocol)"
keywords = ["quic"]
categories = [ "network-programming", "asynchronous" ]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
rand = "0.4"
slab = "0.4"
bytes = "0.4.7"
byteorder = "1.1"
failure = "0.1"
digest = "0.7"
blake2 = "0.7"
constant_time_eq = "0.1"
lazy_static = "1"
slog = { version = "2.2", features = ["max_level_trace", "release_max_level_debug"] }
arrayvec = "0.4.7"
fnv = "1.0.6"
openssl = "0.10.10"

[dev-dependencies]
slog-term = "2"
assert_matches = "1.1"
hex-literal = "0.1.1"

[workspace]
members = ["quicr"]

[profile.release]
debug = true
